html index and locations page added

--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
- 
-        
-        <script src="js/app.js" ></script>
+ <header>
+    <h1>Pat's Salmon Cookies</h1>
+    
+ </header>
+
+        <footer> 
+            <script src="js/app.js" ></script>
+        </footer>
     </body>
 </html>
