add location to nav bar

--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <body>
  <header>
     <h1>Pat's Salmon Cookies</h1>
-    
+    <nav>
+        <a href='locations.html'>Locations</a>
+        
+    </nav>
  </header>
+
 
         <footer> 
             <script src="js/app.js" ></script>
