--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
     <head>
         <meta charset="utf-8">
@@ -10,18 +9,16 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
- <header>
-    <h1>Pat's Salmon Cookies</h1>
-    <nav>
-        <a href='locations.html'>Locations</a>
-        <a href='sale.html'>Sales</a>
-        <a href=''
-    </nav>
- </header>
-
-
-        <footer> 
-            <script src="js/app.js" ></script>
-        </footer>
+        <header>
+            <h1>Contact Information</h1>
+        </header>
+        <main>
+            <h2>Phone</h2>
+            <h3>555-555-5555</h3>
+            <br>
+            <h2>Email</h2>
+            <h3>patssalmoncookies@gmail.com</h3>
+        </main>
+        <script src="" async defer></script>
     </body>
 </html>
