--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <a href=''
     </nav>
  </header>
-
+<main>
+    <img src="pic/salmon.png">
+</main>
 
         <footer> 
             <script src="js/app.js" ></script>
