add nav bar to other pages

--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,11 @@
     <body>
         <header>
             <h1>Contact Information</h1>
+            <nav>
+                <a href='locations.html'>Locations</a>
+                <a href='sale.html'>Sales</a>
+                <a href='contact.html'>Contact</a>
+            </nav>
         </header>
         <main>
             <h2>Phone</h2>
