--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
         <a href='locations.html'>Locations</a>
         <a href='sale.html'>Sales</a>
-        <a href=''
+        <a href='contact.html'>Contact</a>
     </nav>
  </header>
 <main>
