--- a/locations.html
+++ b/locations.html
@@ -11,6 +11,11 @@
     <body>
         <header>
             <h1>Locations</h1>
+            <nav>
+                <a href='locations.html'>Locations</a>
+                <a href='sale.html'>Sales</a>
+                <a href='contact.html'>Contact</a>
+            </nav>
             <h3>All Locations Open 6am-8pm</h3>
         </header>
         <main>
