add home tab to nav

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
  <header>
     <h1>Pat's Salmon Cookies</h1>
     <nav>
+        <a href='index.html'>Home</a>
         <a href='locations.html'>Locations</a>
         <a href='sale.html'>Sales</a>
         <a href='contact.html'>Contact</a>
