--- a/locations.html
+++ b/locations.html
@@ -12,6 +12,7 @@
         <header>
             <h1>Locations</h1>
             <nav>
+                <a href='index.html'>Home</a>
                 <a href='locations.html'>Locations</a>
                 <a href='sale.html'>Sales</a>
                 <a href='contact.html'>Contact</a>
