--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Pats Salmon Cookies</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/style.css">
@@ -25,7 +25,7 @@
 </main>
 
         <footer> 
-            <script src="js/app.js" ></script>
         </footer>
+        <script src="js/app.js" ></script>
     </body>
 </html>
