--- a/sale.html
+++ b/sale.html
@@ -9,6 +9,9 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <script src="" async defer></script>
+        <ul id="storeList">
+
+        </ul>
+        <script src="js/app.js" ></script>
     </body>
 </html>
