table is showing

--- a/sale.html
+++ b/sale.html
@@ -9,9 +9,9 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <ul id="storeList">
+        <table id="storeList">
 
-        </ul>
+        </table>
         <script src="js/app.js" ></script>
     </body>
 </html>
